--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -464,13 +464,14 @@ The abstract goes here. %TODO
 fault-tolerant fashion. It typically runs on a cluster of $2f+1$ nodes, where
 $f$ is the number of faulty nodes that should be tolerated, and consensus is
 achieved on a value $v_i \in \mathbb V$ when $\ge f+1$ (i.e.  a majority) of
-the nodes agree. More generally, if $\mathbb A$ is the set of all nodes then
+the nodes agree.  More generally, if $\mathbb A$ is the set of all nodes then
 there is a set $Q \subseteq \mathcal P \mathbb A$ of \textit{quorums}, and a
-value is chosen when all nodes $a \in q$ agree for some quorum $q \in Q$.
+value is chosen when all nodes $a \in q$ agree for some quorum $q \in Q$. The
+set of quorums is called the \textit{membership} of the cluster.
 
 It is normally necessary to be able to add or remove nodes from the cluster,
-which amounts to the ability to change the set $Q$ of quorums while the cluster
-is running. Since it is crucial that all participating nodes agree on what
+which amounts to the ability to change the membership while the cluster is
+running. Since it is crucial that all participating nodes agree on what
 constitutes a majority at all times, the membership of the cluster is normally
 represented as a state machine whose transitions occur when particular values
 in the sequence are chosen.
@@ -484,25 +485,24 @@ running phase I of all instances at once and then runs phase II of each
 instance in turn to yield the desired sequence of chosen values. It normally
 remains in phase II for an extended period, but will return to phase I if
 certain nodes become faulty, or if messages between certain pairs of nodes
-cease to be delivered reliably for a period, or if the set of quorums $Q$
-changes.
+cease to be delivered reliably for a period, or if the membership changes.
 
 The algorithm allows for \textit{pipelining} in phase II: later instances can
 be started before earlier ones have been chosen, which means that the rate of
 choosing values is not limited by network latency. The pipeline runs smoothly
 as long as phase I does not need to run again, but may stall if phase I is
 re-run. A pipeline stall can be observed as jitter in the rate at which values
-are decided.
+are chosen.
 
 It is unavoidable that a faulty node or disrupted communications may have an
-impact on the system's performance, but changing the set of quorums $Q$ of the
-cluster is a common task and it is undesirable that it should have any such
-effect.  The usual approach to avoiding jitter caused by a pipeline stall when
-a cluster membership change is agreed at instance $i$ is to postpone the
-effects of the change until instance $i + \alpha$ for some $\alpha \ge 0$. If
-$\alpha$ is large enough, there is time to run the new phase I before the
-pipeline stalls.  On the other hand, if $\alpha$ is too large then the
-membership change can take an unreasonably long time to take effect.
+impact on the system's performance, but changing its membership is a common
+task and it is undesirable that it should have any such effect.  The usual
+approach to avoiding jitter caused by a pipeline stall when a cluster
+membership change is agreed at instance $i$ is to postpone the effects of the
+change until instance $i + \alpha$ for some $\alpha \ge 0$. If $\alpha$ is
+large enough, there is time to run the new phase I before the pipeline stalls.
+On the other hand, if $\alpha$ is too large then the membership change can take
+an unreasonably long time to take effect.
 
 As described below, it is in fact possible to delay the effect of a membership
 change for as long as required to run phase I again, but then to allow it to
@@ -518,7 +518,7 @@ dropped.
 
 Let $\mathbb P$ be a set of \textit{proposal identifiers} with a wellfounded
 total order $\prec$. Let $\mathbb A$ be a set of \textit{node identifiers} and
-let $\mathbb V$ be the set of values to be chosen.
+let $\mathbb V$ be the set of values that may be chosen.
 
 \def\prep#1{\mathbf{prepare}(#1)}
 \def\mprom#1#2#3{\mathbf{promised}_{\ge #1}(#2,#3)}
@@ -533,45 +533,49 @@ The Synod algorithm involves four kinds of message, described below.
 Throughout, $p, p' \in \mathbb P$ and $a \in \mathbb A$.  Phase I starts with
 the broadcast of a \textit{prepare} message $\prep{p}$ to which each node $a$
 may respond with a \textit{promise} message, either a \textit{free promise}
-written $\fprom{}{a}{p}$ or a \textit{forced promise} written $\bprom{}{a}{p}{p'}$.
-Phase II starts with the broadcast of a \textit{proposal} message $\prop{}{p}$ to
-which each node $a$ may respond with an \textit{acceptance} message
-$\acc{}{a}{p}$. It is convenient to add another kind of message $\chosen{}{p}$
-which can be thought of as being sent by any node when a proposal has been
-chosen. There is also a function $v : \mathbb P \to \mathbb V$ assigning a
-value to each proposal, and a function $\mathrm{owner} : \mathbb P \to \mathbb
-A$ assigning an owner to each proposal.
+written $\fprom{}{a}{p}$ or a \textit{forced promise} written
+$\bprom{}{a}{p}{p'}$.  Phase II starts with the broadcast of a
+\textit{proposal} message $\prop{}{p}$ to which each node $a$ may respond with
+an \textit{acceptance} message $\acc{}{a}{p}$. It is convenient to add another
+kind of message $\chosen{}{p}$ which can be thought of as being sent by any
+node when a proposal has been chosen.
 
 It is also convenient to treat these as predicates indicating that the
-corresponding messages have been sent. For instance, the predicate $\acc{}{a}{p}$
-indicates that the message $\acc{}{a}{p}$ has been sent and $\neg \prop{}{p}$
-indicates that the message $\prop{}{p}$ has not been sent. Because messages may
-be delayed or dropped, a node can only know a message has not been sent if it
-can prove, based solely on the messages it alone has sent and received, that no
-other node has sent it.
+corresponding messages have been sent. For instance, the predicate
+$\acc{}{a}{p}$ indicates that the message $\acc{}{a}{p}$ has been sent and
+$\neg \prop{}{p}$ indicates that the message $\prop{}{p}$ has not been sent.
+Because messages may be delayed or dropped, a node can only know a message has
+not been sent if it can prove, based solely on the messages it alone has sent
+and received, that no other node has sent it. This is possible because the
+messages $\fprom{}{a}{p}$, $\bprom{}{a}{p}{p'}$ and $\acc{}{a}{p}$ may only
+originate from the node $a$, and there is a function $\mathrm{owner} : \mathbb
+P \to \mathbb A$ assigning an owner to each proposal such that the message
+$\prop{}{p}$ may only originate from node $\mathrm{owner}(p)$.
 
-Theorem \ref{synod-safety-theorem} shows the safety property of the Synod algorithm:
-whenever $\chosen{}{p_1}$ and $\chosen{}{p_2}$ then $v(p_1) = v(p_2)$. The full
-details of the conditions under which nodes can send these messages is included
-in appendix \ref{synod-safety}.
+There is also a function $v : \mathbb P \to \mathbb V$ assigning a value to
+each proposal, and theorem \ref{synod-safety-theorem} shows the safety property
+of the Synod algorithm: whenever $\chosen{}{p_1}$ and $\chosen{}{p_2}$ then
+$v(p_1) = v(p_2)$. The full details of the conditions under which nodes can
+send these messages is included in appendix \ref{synod-safety}.
 
 Each node operates as a state machine whose transitions are caused by the
-receipts of messages. A node may consider phase I to be complete when promise
-messages (either free or forced) have been received from a quorum of nodes, and
-similarly considers phase II to be complete when acceptances have been received
-from a quorum.  The choice of quorums can depend on the proposal number $p$,
-but for any $p$ it must be the case that there is at least one node that is in
-both quorums. More formally, if $p \in \mathbb P$ then write $Q^\textrm{I}(p)$
-and $Q^\textrm{II}(p) \subseteq \mathcal P \mathbb A$ for the sets of phase I
-and phase II quorums for proposal $p$ respectively, then the crucial property
-is that for each $q_1 \in Q^\textrm{I}(p)$ and $q_2 \in Q^\textrm{II}(p)$ it
-must be the case that $q_1 \cap q_2 \ne \varnothing$.
+receipts of messages. A node may consider phase I to be complete at proposal
+$p$ when promise messages for $p$ have been received from a quorum of nodes,
+and similarly considers phase II to be complete at $p$, and hence
+$\chosen{}{p}$, when a quorum of acceptances of $p$ has been received. The
+choice of quorums themselves can depend on the proposal number $p$, but for any
+$p$ it must be the case that there is at least one node that is in both
+quorums. More formally, if $p \in \mathbb P$ then write $Q^\textrm{I}(p)$ and
+$Q^\textrm{II}(p) \subseteq \mathcal P \mathbb A$ for the sets of phase I and
+phase II quorums for proposal $p$ respectively, then the crucial property is
+that for each $q_1 \in Q^\textrm{I}(p)$ and $q_2 \in Q^\textrm{II}(p)$ it must
+be the case that $q_1 \cap q_2 \ne \varnothing$.
 
 It is usual to have $Q^\textrm{I}(p) = Q^\textrm{II}(p)$ and the original
 presentation of the Synod algorithm did not allow for them to be unequal. The
 proof of theorem \ref{synod-safety-theorem} in appendix \ref{synod-safety} is a
 minor generalisation of the original one to demonstrate that safety is
-preserved even when $Q^\textrm{I}(p) \ne Q^\textrm{II}(p)$.
+preserved even when $Q^\textrm{I}(p) \ne Q^\textrm{II}(p)$ for some $p$.
 
 \subsection{The Paxos algorithm}
 
@@ -601,13 +605,13 @@ As in the Synod algorithm, phase I starts with a broadcast of $\prep{p}$ for
 some $p$ to which each node $a$ may respond with a set of promises
 $\fprom{i}{a}{p}$, $\bprom{i}{a}{p}{p'}$ and $\mprom{i}{a}{p}$ according to the
 state of its state machines. If a node receives $\mprom{i}{a}{p}$ messages from
-a quorum of nodes then the state machine $S_\infty$ has completed phase I, and
-therefore any state machines that are subsequently spawned will also have
-completed phase I. Each phase II instance $i$ operates just as in the Synod
-algorithm, starting with a broadcast of $\prop{i}{p}$ to which each node $a$
-may respond with an acceptance $\acc{i}{a}{p}$ and once acceptances have been
-received from a quorum of nodes then the instance is chosen and $\chosen{i}{p}$
-may be emitted.
+a quorum of nodes then the state machine $S_\infty$ has completed phase I at
+$p$, and therefore any state machines that are subsequently spawned will also
+have completed phase I at $p$. Each phase II instance $i$ operates just as in
+the Synod algorithm, starting with a broadcast of $\prop{i}{p}$ to which each
+node $a$ may respond with an acceptance $\acc{i}{a}{p}$ and once acceptances
+have been received from a quorum of nodes then the instance is chosen and
+$\chosen{i}{p}$ may be emitted.
 
 There is a function $v_i : \mathbb P \to \mathbb V$ for each instance $i$ and a
 function $\mathrm{owner} : \mathbb P \to \mathbb A$ which does not depend on the
